[package]
name = "justpkg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
clap = { version ="4.6.0", features=["derive"]}
dirs = "6.0.0"
git2 = "0.20.4"
hex = "0.4.3"
just = "1.49.0"
microxdg = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
