[package]
name = "justpkg"
version = "0.3.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
git2 = "0.20.4"
hex = "0.4.3"
microxdg = "0.2.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
shell-words = "1.1.1"
which = { version = "8.0.2", features = ["regex"] }
